traefik/ingressroutes/fuseki-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fuseki-ui
  namespace: fuseki
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fuseki.local`)
      kind: Rule
      services:
        - name: fuseki
          namespace: fuseki
          port: 3030
