traefik/ingressroutes/minio-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: minio-tenant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.local`)
      kind: Rule
      services:
        - name: data-pipeline-console
          namespace: minio-tenant
          port: 9090
